packages/build/tests/error/stack/fixtures/plugin/plugin.js
module.exports = {
  onInit() {
    throw new Error('test')
  },
}
